2024-09-08  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* index.html: comment out Emacs Elements channel as it seems unavailable

2024-02-20  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* README.rd: add M-x howm-simulate-todo

	* README.ja.rd: ditto.

2024-02-18  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* README.rd: add todo priority chart

	* README.ja.rd: ditto.

2023-12-31  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* old_changes.html: separate too old changes from index.html

	* index.html: ditto.

	* index-j.html: add link to English tutorial (same as index.html)

2023-12-21  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* index.html: add link to English tutorial
	thx > Andrei Sukhovskii san (qojop at tuta.io)

2023-12-17  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* Makefile.am (README-j.html): convert README-j.html to UTF-8

2023-12-03  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* index.html: add link to YouTube video
	thx > Raoul Comninos san (revcomninos at gmail.com)

2023-07-30  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* index.html: add link to Russian manual
	thx > Andrei Sukhovskii san (qojop at tuta.io)

2023-02-16  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* README.ja.rd: add explanation of "sort by reminder"
	thx > Andrei Sukhovskii san (qojop at tuta.io)

2022-12-28  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* index-j.html: add link to the last howm-1.4.*

2022-12-27  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* index-j.html: update version and links

	* index.html: ditto.

	* README.ja.rd: ditto.

	* TUTORIAL.ja.rd: ditto.

2022-12-25  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* index.html: add link to leah blogs

2021-12-30  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* README.ja.rd: update version.

	* index-j.html: ditto.

	* index.html: ditto.

2020-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* README.ja.rd: update version.

	* index-j.html: ditto.

	* index.html: ditto.

2020-10-16  HIRAOKA Kazuyuki  <khi@users.osdn.me>
