@@ -16,7 +16,8 @@ It is not similar to emacs-wiki.el;
 it can be combined with any format.
 
 <ul>
-<li> <a href="https://github.com/kaorahi/howm/releases">Download</a>
+<li> <a href="https://github.com/kaorahi/howm?tab=readme-ov-file#quick-start">Quick start</a>,
+     <a href="https://github.com/kaorahi/howm/releases">Download</a>
      (snapshot:
      <a href="https://melpa.org/#/howm"><img alt="MELPA" src="https://melpa.org/packages/howm-badge.svg"/></a>
      /
@@ -25,8 +26,8 @@ it can be combined with any format.
 <li> <a href="https://leahneukirchen.org/blog/archive/2022/03/note-taking-in-emacs-with-howm.html">Introduction by Leah Neukirchen</a> (thx!)
 <li> <a href="https://github.com/Emacs101/howm-manual">Detailed English &amp; Russian tutorials by Andrei Sukhovskii</a> (thx!)
 <!-- <li> <a href="https://www.youtube.com/watch?v=cCflzhDelvg">1-minute introduction on YouTube under Emacs Elements channel</a> (unavailable? [2024-09-07]) -->
-<li> <a href="https://github.com/kaorahi/howm/issues">Bug reports, discussions, etc.</a>
-<li style="opacity: 0.5;"> <a href="README.html">Tutorial</a>, EmacsWiki (<a href="https://www.emacswiki.org/emacs/HowmMode">HowmMode</a> by <a href="https://www.emacswiki.org/emacs/khi">khi</a>), <a href="https://lists.osdn.me/mailman/listinfo/howm-eng">old mailing list</a> (may be broken. <a href="https://osdn.net/projects/howm/lists/archive/eng/">archives</a>)
+<li> <a href="https://www.emacswiki.org/emacs/HowmMode">Tips</a>, <a href="https://github.com/kaorahi/howm/issues">Bug reports &amp; discussions</a>
+<li style="opacity: 0.5;"> <a href="README.html">old tutorial</a>, <a href="https://lists.osdn.me/mailman/listinfo/howm-eng">old mailing list</a> (may be broken. <a href="https://osdn.net/projects/howm/lists/archive/eng/">archives</a>)
 </ul>
 
 <hr>
@@ -84,7 +85,7 @@ You can keep your favorite style. :-)
 
 <hr>
 
-<h2>Install</h2>
+<h2>Manual installation</h2>
 
 <ul>
  <li> './configure', 'make', and 'make install'.
