@@ -1,3 +1,7 @@
+2024-09-15  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>
+
+	* index.html: update links etc. (quick start, tips)
+
 2024-09-08  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>
 
 	* index.html: comment out Emacs Elements channel as it seems unavailable
